# DOCA_BF3

./: .gitignore  udo systemctl daemon-reload
applications/: meson.build  meson_options.txt
applications/bifurcated_driver_model/: bifurcated_driver_model.c  bifurcated_driver_model_core.c  bifurcated_driver_model_core.h  meson.build
applications/common/: dpdk_utils.c  dpdk_utils.h  flow_parser.c  flow_parser.h  flow_skeleton.c  flow_skeleton.h  utils.c  utils.h
applications/dma_copy/: dma_copy_core.c
applications/dpa_all_to_all/: build_device_code.sh  build_dpa_all_to_all.sh
applications/dpa_all_to_all/device/: dpa_all_to_all_attributes.yaml  dpa_all_to_all_dev.c
applications/dpa_all_to_all/host/: dpa_all_to_all.c  dpa_all_to_all_core.c  dpa_all_to_all_core.h
applications/dpu_gpu_remote_offload/: meson.build
applications/dpu_gpu_remote_offload/client/: application.cpp  application.hpp  configuration.hpp  main.cpp  stats.hpp  thread.cpp  thread.hpp
applications/dpu_gpu_remote_offload/dependencies/: meson.build
applications/dpu_gpu_remote_offload/orchestrator/: application.cpp  application.hpp  comch_control_channel.cpp  comch_control_channel.hpp  comch_datapath.cpp  comch_datapath.hpp  configuration.hpp  gpu_processing.cu  gpu_processing.h  main.cpp  stats.hpp
applications/dpu_gpu_remote_offload/remote_offload_common/: control_message.cpp  control_message.hpp  doca_utils.cpp  doca_utils.hpp  os_utils.hpp  runtime_error.hpp  tcp_socket.hpp  thread_control.hpp
applications/dpu_gpu_remote_offload/remote_offload_common/posix/: os_utils.cpp  tcp_socket.cpp
applications/dpu_gpu_remote_offload/server/: application.cpp  application.hpp  comch_control_channel.cpp  comch_control_channel.hpp  configuration.hpp  main.cpp  stats.hpp  thread.cpp  thread.hpp
applications/eth_l2_fwd/: eth_l2_fwd_core.c  eth_l2_fwd_core.h  meson.build
applications/gpu_packet_processing/gpu_kernels/: receive_icmp.cu  receive_tcp.cu  receive_udp.cu
applications/ip_frag/: ip_frag_dp.c
applications/ipsec_security_gw/: config.c  flow_common.c  flow_common.h  flow_decrypt.c  flow_decrypt.h  flow_encrypt.c  flow_encrypt.h  ipsec_ctx.c  ipsec_ctx.h  ipsec_security_gw.c
applications/nvme_emulation/: build_device_code.sh  meson.build
applications/nvme_emulation/device/: doca_transport_attributes.yaml
applications/pcc/: build_device_code.sh
applications/pcc/device/: dpa_app_attributes.yaml
applications/pcc/host/: pcc_core.c
applications/psp_gateway/: psp_gw_config.h  psp_gw_flows.cpp  psp_gw_flows.h  psp_gw_params.cpp  psp_gw_svc_impl.cpp  psp_gw_svc_impl.h
applications/simple_fwd_vnf/: simple_fwd.c  simple_fwd_ft.c  simple_fwd_port.h  simple_fwd_vnf.c
applications/storage/: comch_to_rdma_gga_offload.cpp  comch_to_rdma_zero_copy.cpp  gga_offload_sbc_generator.cpp  initiator_comch.cpp  meson.build  target_rdma.cpp
applications/storage/dependencies/: meson.build
applications/storage/storage_common/: control_channel.cpp  control_message.cpp  control_message.hpp  control_worker_async.hpp  doca_utils.cpp  doca_utils.hpp  io_message.cpp  io_message.hpp  lz4_sw_context.cpp  lz4_sw_context.hpp
applications/switch/: switch_core.c
applications/virtiofs/: README.md  virtiofs.c  virtiofs_core.c  virtiofs_device.c  virtiofs_device.h  virtiofs_manager.c  virtiofs_mpool.c  virtiofs_request.c  virtiofs_request.h  virtiofs_thread.c  virtiofs_thread.h
applications/virtiofs/nfs_fsdev/: nfs_fsdev.c  nfs_fsdev.h  nfs_fsdev_io_device.cpp  nfs_fsdev_io_device.h  nfs_fsdev_pipe.cpp  nfs_fsdev_pipe.h  nfs_fsdev_recovery.c  priv_nfs_fsdev.h
docs/Installation/: 00-overview.md  01-install.md  02-issues.md  03-doca-dev-env.md
docs/dma_copy/: dma_copy_overview.md
docs/offloading/: 00-Set Mtu9000 & OVS_Offloading.md
samples/: common.c
samples/doca_common/clock_cross_timestamp/: clock_cross_timestamp_main.c  clock_cross_timestamp_sample.c  clock_cross_timestamp_sample.h  meson.build
samples/doca_compress/: README.md  compress_common.c
samples/doca_compress/compress_deflate/: compress_deflate_sample.c
samples/doca_compress/decompress_deflate/: decompress_deflate_sample.c
samples/doca_devemu/: build_dpacc_samples.sh
samples/doca_dma/: dma_common.h
samples/doca_dpa/: README.md  build_dpacc_samples.sh  dpa_common.c  dpa_common.h
samples/doca_eth/: eth_flow_common.c  eth_flow_common.h  eth_rxq_common.c  eth_rxq_common.h
samples/doca_flow/: README.md  flow_common.c  flow_common.h  flow_ct_common.c  flow_switch_common.c  flow_switch_common.h
samples/doca_gpunetio/: rdma_common.c  rdma_common.h  verbs_common.c  verbs_common.h  verbs_high_level.c
samples/doca_mgmt/: README.md
samples/doca_rmax/: README.md  rmax_common.c  rmax_common.h
samples/doca_telemetry/: README.md
(+226 files in other folders)
